welcome.lessons.welcome.instructions.Instructions.scala.error
Program:4: error: not found: value baisseBrosee
baisseBrosee()
^Program:16: error: not found: value leveBrosee
leveBrosee()
^