welcome.lessons.welcome.instructions.Instructions.scala.code
droite()
avance()
baisseBrosee()
gauche()
avance()
avance()
gauche()
avance()
avance()
gauche()
avance()
avance()
gauche()
avance()
leveBrosee()
gauche()
avance()


